file_path encoded in UTF16LE on windows